Closes gh-14352